<resources>
    <string name="app_name">nfgplus</string>
    <string name="save">Save</string>
    <string name="enter_index_details">Enter Index Details</string>
    <string name="index_link">Index Link</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="index_details">Index Details</string>
    <string name="overview">Overview</string>
    <string name="download">Download</string>
    <string name="play">Play</string>
    <string name="available_files">Available Files</string>
    <string name="default_web_client_id">482142495652-lf62g37hob4pms6kc8pl1ecmosgufb30.apps.googleusercontent.com</string>


    <string-array name="sort_methods">
        <item>FileName</item>
        <item>Title</item>
        <item>TimeModified</item>
        <item>ReleaseDate</item>
        <item>Size</item>
        <item>IndexLink</item>
    </string-array>

    <string-array name="index_types">
        <item>GDIndex</item>
        <item>GoIndex</item>
        <item>MapleIndex</item>
        <item>SimpleProgram</item>
    </string-array>

    <string-array name="folder_types">
        <item>Movies</item>
        <item>TVShows</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_available">Update Available</string>
    <string name="update">update</string>
    <string name="not_now">Not Now</string>
    <string name="sort_by">Sort By</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="import_export_instructions">When permission is asked for storage allow and restart the app \n Exported Database is stored in Download/Thunder \n (Check if the file \"ThunderBackup.db\" is present in the device after export)\n To import previously exported Database: \n Click Import Database and restart the app</string>
    <string name="search_for_a_movie_or_a_show">Search for a movie or a show</string>
    <string name="gdindex">GDIndex</string>
    <string name="goindex">GoIndex</string>
    <string name="mapleindex">Maple</string>
    <string name="simpleprogram">SimpleProgram</string>
    <string name="enter_link_msg">Enter Index Link</string>
    <string name="sign_up">Sign Up</string>
    <string name="_0_movies_detected">Scan to get all movies libraries, scan process may take a long time.
        You can leave this tab while scanning after you click button below of course :) </string>
    <string name="scan_movie">Scan Movie</string>
    <string name="scan_now">Scan Now</string>
    <string name="movies_scanned">Movies Scanned</string>
    <string name="versionname">PancaDasa Version</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in_nfgplus">Sign in nfgplus Account</string>
    <string name="sign_in">Sign In</string>
    <string name="refresh_movie_everday_at">Refresh Movie Everday at</string>
    <string name="backup">Backup</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="refresh_scan_movie">Refresh Scan Movie</string>
    <string name="join_our_telegram">Join Our Telegram</string>
    <string name="series_tvshow_is_not_available_right_now">Series / TVShow is not available right now</string>
    <string name="no_series_available">Scan to get all Series libraries, scan process may take a long time.
        You can leave this tab while scanning after you click button below of course :)</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="recently_added">Recently Added</string>
    <string name="on_trending">On Trending Movies</string>
    <string name="space_iklan_tersedia">Space Iklan Tersedia</string>
    <string name="donate_a_coffee">Donate A Coffee</string>
    <string name="subtitle_style">Subtitle Style</string>
    <string name="film_indo">Film Indo</string>
    <string name="scan">Scan</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>