<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.theflexproject.thunder.fragments.HomeFragment">

    <TextView
        android:id="@+id/verifTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/jost_medium"
        android:text="Home"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:visibility="gone"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="85dp"
        android:clipToPadding="false"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/recentlyAdded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_medium"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:paddingStart="20dp"
                android:text="@string/on_trending"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recentlyAddedRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                android:layout_marginTop="14dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/movie_item_banner" />
            <TextView
                android:id="@+id/trending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_medium"
                android:paddingStart="20dp"
                android:text="Recently Added"
                android:visibility="gone"

                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trendingRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:scrollbars="horizontal" />
            <TextView
                android:id="@+id/newReleasesMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_medium"
                android:paddingStart="20dp"
                android:text="New Released"
                android:visibility="invisible"

                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recentlyReleasedMoviesRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/topRatedMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_medium"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:text="@string/top_rated_movies"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topRatedMoviesRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                android:layout_marginTop="14dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/movie_item_banner" />

            <TextView
                android:id="@+id/lastPlayedMovies2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_medium"
                android:paddingStart="20dp"
                android:text="Some Recommendation"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lastPlayedMoviesRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                android:layout_marginTop="14dp"
                 />

            <TextView
                android:id="@+id/watchListMedia1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_medium"
                android:paddingStart="20dp"
                android:text="Old Gold Movies"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/watchListMediaRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                android:layout_marginTop="14dp"
                 />

            <TextView
                android:id="@+id/filmIndo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/jost_medium"
                android:paddingStart="20dp"
                android:text="@string/film_indo"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textSize="16sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/filmIndoRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:scrollbars="horizontal" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>